--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "server": "json-server --watch data/cities.json --port 9000 --delay 500"
+    "start": "json-server --watch data/cities.json --port $PORT --delay 500"
   },
   "dependencies": {
     "firebase": "^11.9.0",
